crates/vaab-vm/tests/snapshots/concurrency__a_bounded_channel_holds_only_as_many_as_its_size.snap
---
source: crates/vaab-vm/tests/concurrency.rs
expression: "run(source).join(\"\\n\")"
---
found 1
found 2
