crates/vaab-vm/tests/snapshots/concurrency__deadlock_on_a_rendezvous_with_no_partner_is_reported.snap
---
source: crates/vaab-vm/tests/concurrency.rs
expression: rendered
---
[deadlock] Error: every task is blocked
   ╭─[ example.vaab:2:1 ]
   │
 2 │ send 1 to alone
   │ ───────┬───────  
   │        ╰───────── nothing here can make progress
   │ 
   │ Help: check that some task can still run, send, or receive
   │ 
   │ Note: every task is blocked:
   │         task 0 (the top level): sending to channel 0
───╯
